# cpp-terminal

./: .LICENSE  .clang-format  .clang-tidy  .cmake-format.yml  .cmake-linter.yml  .codespellignore  .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  README.md  appveyor.yml  build.bat  cpp-terminalConfig.cmake.in  terminal.h  terminal_base.h  test_terminal.cpp  tests.sh
.github/workflows/: .env  CI.yml  README.md  clang-format.yml  codeql-analysis.yml  cpp-linter.yml  dockcross.yml  docs.yml  linux.yml  linux_old.yml  macOS.yml  macos.yml  macos_old.yml  pre-commit-check.yml  windows.yml
.github/workflows/micromamba/: docs.yml
ci/: citest.bat  citest.sh  compile_test.ps1  compile_test.sh  examples.ps1  examples.sh  test.ps1  tests.sh
cmake/: Documentation.cmake  InstallLibs.cmake  Warnings.cmake  cpp-terminalConfig.cmake.in  install.cmake
cpp-terminal/: CMakeLists.txt  args.cpp  args.hpp  base.cpp  base.hpp  buffer.cpp  buffer.hpp  color.cpp  color.hpp  cursor.cpp  cursor.hpp  event.cpp  event.hpp  exception.cpp  exception.hpp  focus.cpp  focus.hpp  input.cpp  input.hpp  io.cpp  io.hpp  iostream.cpp  iostream.hpp  iostream_initializer.cpp  iostream_initializer.hpp  key.cpp  key.hpp  mouse.cpp  mouse.hpp  options.cpp  options.hpp  position.hpp  prompt.cpp  prompt.hpp  screen.cpp  screen.hpp  size.hpp  stream.cpp  stream.hpp  style.cpp  (+20 more)
cpp-terminal/old/: terminal.h  terminal_base.h
cpp-terminal/private/: CMakeLists.txt  README.md  args.cpp  blocking_queue.cpp  blocking_queue.hpp  conversion.cpp  conversion.hpp  cursor.cpp  env.cpp  env.hpp  exception.cpp  exception.hpp  file.cpp  file.hpp  file_initializer.cpp  file_initializer.hpp  input.cpp  input.hpp  inputOutputModeFlags.hpp  macros.hpp  platform.cpp  platform.hpp  return_code.cpp  return_code.hpp  screen.cpp  signals.cpp  signals.hpp  sigwinch.cpp  sigwinch.hpp  terminal.cpp  terminal_impl.cpp  terminfo.cpp  tty.cpp  unicode.cpp  unicode.hpp  version.cpp.in
docs/: CMakeLists.txt  header.tex
examples/: CMakeLists.txt  args.cpp  attach_console.cpp  attach_console_minimal.cpp  cin.cpp  cin_cooked.cpp  cin_raw.cpp  colors.cpp  cout.cpp  cursor.cpp  events.cpp  keys.cpp  kilo.cpp  menu.cpp  menu_advanced.cpp  menu_window.cpp  menu_window_24bit.cpp  minimal.cpp  pipe_cin.cpp  prompt.cpp  prompt_blocking.cpp  prompt_immediate.cpp  prompt_multiline.cpp  prompt_non_blocking.cpp  prompt_not_immediate.cpp  prompt_simple.cpp  read_stdin.cpp  signal.cpp  slow_events.cpp  styles.cpp  utf8.cpp
test-standalone/: CMakeLists.txt  colors.cpp
tests/: CMakeLists.txt  args.test.cpp  attach_console.test.cpp  attach_console_minimal.test.cpp  build.bat  doctest.h  events.test.cpp  exception.test.cpp  file.test.cpp  iostream.test.cpp  key.test.cpp  options.test.cpp  screen.test.cpp  test_terminal.cpp  test_terminal.test.cpp  unicode.test.cpp  version.test.cpp
tests/test-standalone/: CMakeLists.txt  colors.cpp
